tests/baselines/reference/inferSecondaryParameter(strict=true).errors.txt
inferSecondaryParameter.ts(3,16): error TS7010: 'm', which lacks return-type annotation, implicitly has an 'any' return type.
inferSecondaryParameter.ts(7,23): error TS7006: Parameter 'bug' implicitly has an 'any' type.


==== inferSecondaryParameter.ts (2 errors) ====
    // type inference on 'bug' should give 'any'
    
    interface Ib { m(test: string, fn: Function); }
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'm', which lacks return-type annotation, implicitly has an 'any' return type.
    
    var b: Ib = { m: function (test: string, fn: Function) { } };
    
    b.m("test", function (bug) {
                          ~~~
!!! error TS7006: Parameter 'bug' implicitly has an 'any' type.
        var a: number = bug;
    });